--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 #header {
     display: flex;
     height: 18vh;
+    box-shadow: 0px 4px 12px rgba(18, 33, 63, 0.05);
 }
 #header > * {
     width: 13%;
@@ -17,7 +18,6 @@ body {
     max-width: 100%;
     max-height: 100%;
 }
-
 #menu {
     flex-grow: 2;
 }
@@ -32,7 +32,6 @@ body {
 #content {
     padding: 10em;
 }
-
 #footer-top {
     height: 40vh;
     display: flex;
@@ -63,7 +62,7 @@ body {
 #footer-bottom-container > div {
     flex-grow: 1;
 }
-#footer-bottom-container > div > p, li {
+#footer-bottom-container > div > p {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -73,17 +72,6 @@ body {
     list-style: none;
 }
 
-.block {
-    padding:0; 
-}
-
-.block  li {
-    font-size: 14px;
-    line-height: 16px;
-    color: #FFFFFF;
-    opacity: 0.6;
-    padding: 0;
-}
 #footer-bottom-copyright {
     display: flex;
 }
@@ -121,6 +109,19 @@ body {
     text-align: right;
     letter-spacing: -0.02em;
     color: #FFFFFF;
+}
+
+.block {
+    padding:0; 
+}
+
+.block  li {
+    font-size: 14px;
+    line-height: 16px;
+    color: #FFFFFF;
+    opacity: 0.6;
+    padding: 0;
+    list-style: none;
 }
 .slider-item {
     position: relative;
